Mudança de profile1

--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 	<meta name="keywords" content="Websites, Criação">
 	<meta name="robots" content="index, follow">
 	<meta name="author" content="Leandro Yata">
-	
 	<link rel="icon" href="img/icon.png">
 </head>
     
 <body>
     <div class="box">
-        <img src="img/profile.png" alt="" class="box-img">
+        <img src="img/profile2.png" alt="" class="box-img">
         <h1>LeandroID Yata</h1>
         <h5>Desenvolvedor Web - Web Designer</h5>
         <p>Um desenvolvedor da Web é um programador especializado ou envolvido especificamente no desenvolvimento de aplicativos da World Wide Web ou em aplicativos que são executados via HTTP de um servidor da Web para um navegador da Web.</p>
